# alx-final_project_001

./: .gitignore  .replit  README.md  app.py  main.py  pyproject.toml  replit.nix  requirements.txt  requirments.txt
static/: style.css
templates/: bottom.html  footer.html  index.html  login.html  register.html  top.html
