-dev[tool.poetry]
name = "repl-nix-alx-finalproject001"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_alx_finalproject001"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
